# eplua

./: .gitignore  ARCHITECTURE.md  FINAL_HTML_RECOMMENDATION.md  HTML_SIZING_FIXES_SUMMARY.md  HTML_WIDGET_UPGRADE_GUIDE.md  README.md  REALISTIC_HTML_ASSESSMENT.md  UI_SOLUTION_ANALYSIS.md  alternative_approach.md  debug_quickapp_test.lua  eplua.bat  eplua.py  pyproject.toml  refresh.py  run.sh  test_examples.sh  test_quickapp_window.lua  test_window_behavior.lua
.github/: copilot-instructions.md
dev/: eplua_gui_launcher.py  eplua_launcher.py  test_config.lua  test_updated_window_manager.py
docs/: ENHANCED_NATIVE_UI.md  PYfunctions.md  README.md
examples/fibaro/: QA_basic.lua  fixed_sizing_demo.lua  html_alignment_demo.lua  html_label_demo.lua  hybrid_ui_demo.lua  json_row_demo.lua
examples/lua/: README.md  README_WINDOWS.md  (+11 more)
fibaro_api_docs/: RGBPrograms.json  additionalInterfaces.json  capabilities.json  categories.json  consumption.json  debugMessages.json  deviceNotifications.json  devices.json  diagnostics.json  energy.json  favoriteColors.json  favoriteColorsV2.json  fti.json  gatewayConnection.json  getZwaveEngine.json  home.json  icons.json  iosDevices.json  limits.json  linkedDevices.json  loginStatus.json  networkDiscovery.json  notificationCenter.json  panelService.json  passwordForgotten.json  plugins.json  profiles.json  quickapp.json  reboot.json  refreshStates.json  resetZigbee.json  rooms.json  scenes.json  sections.json  setZwaveEngine.json  sortOrder.json  systemStatus.json  termsOfService.json  testSatelConnection.json  userActivity.json  (+4 more)
(+65 files in other folders)
